# news

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
database/: .gitignore  Dockerfile  startup.sh
database/sql/: seed.sql
src/: config.py  database.py  main.py
src/routes/: items.py
