[tool.poetry]
name = "news"
version = "1.0.0-rc"
description = ""
authors = ["Dan Frederick <dannyfrederick360@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.0"
faker = "^19.6.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
config = "^0.5.1"
psycopg2-binary = "^2.9.0"
pydantic = "^2.7.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
flake8 = "^6.1.0"
black = "^23.7.0"
nox = "^2023.4.22"
pytest = "^7.4.1"
poethepoet = "^0.23.0"

[tool.poe.tasks]
test = "pytest -v"
check-tests = " pytest --collect-only -v"
run = "uvicorn src.main:app --reload"
lint = "local.lint:main"

[tool.pytest.ini_options]
markers = [
    "llm: marks tests that make calls to an llm api (deselect with '-m \"not llm\"')",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
